# directory-indexing-util

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml
docs/: index.md  library.md  usage.md
docs/demos/: index.tape  make_demo_tree.py  profiles.tape  scan.tape
research/: README.md  hashing_strategies.md  scanning_strategies.md
research/benchmarks/: generate_test_data.py  hashing_benchmark.py  scanning_benchmark.py
src/directory_indexing_util/: __init__.py  __main__.py  _algorithms.py  config.py  formats.py  hasher.py  progress.py  scanner.py
tests/: test_cli.py  test_cli_helpers.py  test_config.py  test_hasher.py  test_index.py  test_package.py  test_scanner.py
