[project]
name = "directory-indexing-util"
version = "0.1.0"
description = "Performant, security-minded directory walking, file hashing, and indexing"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
research = [
    "tqdm>=4.66",
    "blake3>=1.0",
    "joblib>=1.4",
    "tqdm-joblib>=0.0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "PT"]
ignore = ["S603", "S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
